feat: project side by side

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,11 @@ body {
   background-color: whitesmoke;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .header {
   border-bottom: 1px black solid;
   display: flex;
@@ -16,5 +21,37 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.about {
   width: 60vw;
+}
+
+.projects {
+  display: flex;
+  flex-direction: row !important;
+}
+
+.side {
+  width: 20vw;
+
+  button {
+    padding: 5px;
+    border: none;
+    background: none;
+  }
+
+  button:hover{
+    background: black;
+    color: #fff;
+    border-radius: 8px;
+  }
+
+  ul{
+    list-style-type:none;
+    }
+}
+
+#project-readme {
+  width: 80vw;
 }
