feat: contact form without sending

--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
         <button hx-get="/projects" hx-swap="innerHTML" hx-target="#content">
           Projects
         </button>
-        <button hx-get="/projects" hx-swap="innerHTML" hx-target="#content">
+        <button hx-get="/contact" hx-swap="innerHTML" hx-target="#content">
           Contact
         </button>
       </div>
@@ -69,7 +69,6 @@
       hx-trigger="load"
       hx-swap="innerHTML"
     >
-      {{.Readme}}
     </div>
     <div class="footer">
       <a href="https://github.com/tgrangeo" class="copyright"
