--- a/static/styles.css
+++ b/static/styles.css
@@ -49,9 +49,10 @@ img {
   align-items: center;
   justify-content: space-between;
   margin: 2vw;
-  img {
-    margin-right: 5px;
-  }
+}
+
+.header img {
+  margin-right: 5px;
 }
 
 .header button {
@@ -92,6 +93,7 @@ img {
 ul {
   list-style-type: none;
 }
+
 .side {
   width: 20vw;
 }
@@ -127,13 +129,14 @@ ul {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  * {
-    margin-right: 0.5vw !important;
-  }
+}
+
+.user-title * {
+  margin-right: 0.5vw !important;
 }
 
 .footer {
-  padding:20px 0;
+  padding: 20px 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -141,22 +144,80 @@ ul {
 }
 
 .footer .copyright {
-width: auto;
+  width: auto;
   display: flex;
   flex-direction: row;
-  margin-top:15px;
+  margin-top: 15px;
   justify-content: center;
-  font-size:13px;
-  margin-bottom:0;
+  font-size: 13px;
+  margin-bottom: 0;
   color: var(--text-color);
   text-decoration: none;
-  img{
-    margin-right: 5px;
-    margin-bottom: 2px;
-  }
+}
+
+.footer .copyright img {
+  margin-right: 5px;
+  margin-bottom: 2px;
 }
 
 .footer .copyright:hover {
   border-bottom: var(--text-color) 2px solid;
   cursor: pointer;
+}
+
+/* Contact Form */
+.contactForm {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.contactForm label {
+  font-weight: bold;
+}
+
+.contactForm input[type="text"],
+.contactForm input[type="email"],
+.contactForm textarea {
+  background-color:  var(--background-color);
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  box-sizing: border-box; 
+  border: 2px solid var(--color);
+  color: var(--color);
+  border-radius: 4px;
+  font-size: 14px;
+  transition: border-color 0.3s ease;
+  outline: none;
+}
+
+.contactForm input[type="text"]:focus,
+.contactForm input[type="email"]:focus,
+.contactForm textarea:focus {
+  border: 2px solid #4CAF50;
+}
+
+.contactForm textarea {
+  height: 120px;
+}
+
+.contactForm input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.contactForm input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.contactForm p {
+  margin-top: 10px;
+  font-style: italic;
 }
